--- a/app/views/layouts/i_reach/application.html.erb
+++ b/app/views/layouts/i_reach/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
-  <!-- iReach template -->
+  <!-- iReach application.html.rb -->
   <title><%= h(yield(:title) || "iReach Newsletter Manager") %></title>
   <%= stylesheet_link_tag    "i_reach/application", :media => "all" %>
   <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/le-frog/jquery-ui.css" media="screen" rel="stylesheet" type="text/css" />
@@ -10,44 +10,33 @@
   <%= content_for :head %>
 </head>
 <body>
-
-
-
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
-    <td><%= image_tag "i_reach/1topLeft.gif", width: "269", height:"85" %></td>
-    <td width="100%" align="left" background="/assets/i_reach/topMid.gif"><%= image_tag "i_reach/1topMidR.gif", width: "435", height: "85" %></td>
-    <td align="right"><%= image_tag "i_reach/1topRight.gif", width: "62", height: "85" %></td>
-  </tr>
-</table>
-
-
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-  
-  <tr>
-    <td valign="top" bgcolor="#FFFFFF">
-      <table border="0" cellspacing="0" cellpadding="0" class="menu">
-        <tr>
-          <td valign="top"><%= image_tag "i_reach/menuMainLeft.gif", width: "7", height: "257" %></td>
-          <td valign="top" class="table-bk">
-            <div id="menu" style="display: inline;">
-              &nbsp;&nbsp;&nbsp;<span class="menuSM"><a href="/admin/newsletter/newsletters?menu_id=11">Newsletters</a></span><br>
-              &nbsp;&nbsp;&nbsp;<span class="menuSM"><a href="/admin/newsletter/designs?menu_id=11">Designs</a></span><br>
-              &nbsp;&nbsp;&nbsp;<span class="menuSM"><a href="/admin/mail_manager/contacts?menu_id=11">Contacts</a></span><br>
-              &nbsp;&nbsp;&nbsp;<span class="menuSM"><a href="/admin/mail_manager/mailings?menu_id=11">Mailings</a></span><br>
-              &nbsp;&nbsp;&nbsp;<span class="menuSM"><a href="/admin/mail_manager/mailing_lists?menu_id=11">Mailing Lists</a></span><br>
-              &nbsp;&nbsp;&nbsp;<span class="menuSM"><a href="/admin/mail_manager/bounces?menu_id=11">Bounces</a></span><br>
+<div id="top"><%= image_tag "i_reach/1topLeft.gif", width: "269", height:"85", style: "float: left;" %><%= image_tag "i_reach/1topMidR.gif", width: "435", height: "85", style: "float: left;" %><%= image_tag "i_reach/1topRight.gif", width: "62", height: "85", style: "float: right;" %>&nbsp;</div>
+<div style="background-color: #fff;">
+            <div id="menu">
+              <ul>
+                <li><a href="#">Setup</a>
+                  <ul>
+                    <li>Admin Menus</a></li>
+                    <li>Admin Users</a></li>
+                    <li><a href="/admin/newsletter/designs?menu_id=11">Newsletter Designs</a></li>
+                  </ul>
+                </li>
+                <li>Newsletters
+                  <ul>
+                    <li><a href="/admin/newsletter/newsletters?menu_id=11">Newsletters</a></li>
+                  </ul>
+                </li>
+                <li>Mailings
+                  <ul>
+                    <li><a href="/admin/mail_manager/contacts?menu_id=11">Contacts</a></li>
+                    <li><a href="/admin/mail_manager/mailings?menu_id=11">Mailings</a></span><br>
+                    <li><a href="/admin/mail_manager/mailing_lists?menu_id=11">Mailing Lists</a></li>
+                    <li><a href="/admin/mail_manager/bounces?menu_id=11">Bounces</a></li>
+                  </ul>
+                </li>
+              </ul>
             </div>
-          </td>
-        </tr>
-        <tr>
-          <td><%= image_tag "i_reach/menuBotLeft.gif", width: "7", height: "8" %></td>
-          <td><%= image_tag "i_reach/menuBot.gif", width: "176", height: "8" %></td>
-        </tr>
-      </table>
-    </td>
-    <td width="100%" valign="top" bgcolor="#FFFFFF" class="main">
-      
+<div id="page_content">
       <% flash.each do |name, msg| -%>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end -%>
@@ -55,22 +44,10 @@
       <% if show_title? -%>
         <h1><%=h yield(:title) %></h1>
       <% end -%>
-      
       <%= yield %>
       
       <%= yield :page_navigation %>
-</td>
-
-<td background="/assets/i_reach/1midRight.gif"><%= image_tag "i_reach/1midRight.gif", width: "62", height: "19" %></td>
-  </tr>
-</table>
-
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td width="100%" background="/assets/i_reach/1botMid.gif"><%= image_tag "i_reach/1botMid.gif", width: "13", height: "39" %></td>
-<td align="right"><%= image_tag "i_reach/1botRight.gif", width: "62", height: "39" %></td>
-</tr>
-</table>
-
+</div>
+</div>
 </body>
 </html>
