--- a/app/assets/stylesheets/i_reach/nav.css
+++ b/app/assets/stylesheets/i_reach/nav.css
@@ -13,8 +13,8 @@
   padding-left: 3px;
   padding-bottom: 10px;
   margin: 0 5px 5px 0;
-  border-right: 1px solid #fdba59;
-  border-bottom: 1px solid #fdba59;
+/*border-right: 1px solid #fdba59;
+  border-bottom: 1px solid #fdba59;*/
   font-family: helvetica, arial, sans-serif;
   font-weight: bold;
   line-height: 12pt;
