--- a/app/views/layouts/i_reach/application.html.erb
+++ b/app/views/layouts/i_reach/application.html.erb
@@ -10,10 +10,11 @@
   <%= content_for :head %>
 </head>
 <body>
-<div id="top"><%= image_tag "i_reach/1topLeft.gif", width: "269", height:"85", style: "float: left;" %><%= image_tag "i_reach/1topMidR.gif", width: "435", height: "85", style: "float: left;" %><%= image_tag "i_reach/1topRight.gif", width: "62", height: "85", style: "float: right;" %>&nbsp;</div>
+<div id="top"><%= image_tag "i_reach/iReach_logo.gif", width: "269", height:"85", style: "float: left;" %><%= image_tag "i_reach/TopCenter.gif", width: "435", height: "85", style: "float: left;" %><%= image_tag "i_reach/TopRight.gif", width: "62", height: "85", style: "float: right;" %>&nbsp;</div>
 <div style="background-color: #fff;">
             <div id="menu">
               <ul>
+                <li><a href="/admin">Home</a></li>
                 <li><a href="#">Setup</a>
                   <ul>
                     <li>Admin Menus</a></li>
@@ -21,11 +22,7 @@
                     <li><a href="/admin/newsletter/designs?menu_id=11">Newsletter Designs</a></li>
                   </ul>
                 </li>
-                <li>Newsletters
-                  <ul>
-                    <li><a href="/admin/newsletter/newsletters?menu_id=11">Newsletters</a></li>
-                  </ul>
-                </li>
+                <li><a href="/admin/newsletter/newsletters">Newsletters</a></li>
                 <li>Mailings
                   <ul>
                     <li><a href="/admin/mail_manager/contacts?menu_id=11">Contacts</a></li>
@@ -49,5 +46,6 @@
       <%= yield :page_navigation %>
 </div>
 </div>
+<%= image_tag "i_reach/BottomRight.gif", width: "62", height: "85", style: "float: right;" %>
 </body>
 </html>
