--- a/app/assets/stylesheets/i_reach/admin.css
+++ b/app/assets/stylesheets/i_reach/admin.css
@@ -12,7 +12,7 @@ body {
   height: 85px;
   min-width: 766px;
 }
-
+/*
 img {
    display: block;
 }
@@ -32,7 +32,7 @@ img {
    width:100%;
    float:left;
 }
-
+*/
 h1 {
    font-size: 16pt;
    color: #599c41;
@@ -48,6 +48,7 @@ h1 {
 }
 
 /*Content------------------------------------------------*/
+/*
 #content {
         margin:0; 
         padding:10px 15px 15px 15px;
@@ -60,7 +61,7 @@ h1 {
         font-family:Arial, Helvetica, sans-serif;
         font-size: 14px;
 }
- 
+*/ 
 hr {
         margin: 0 0 0 10px;
         width: 620px;
@@ -129,6 +130,11 @@ label {font-size: 11pt;
    font-weight: bold;
    text-align: right;
    color:#555;
+   width: 145px;
+   float:left;
+   display: block;
+   text-align: right;
+   padding: 7px 7px 0 0;
 }       
 
 input, select, textarea {
@@ -220,13 +226,21 @@ a.button:hover {
     background-color: #eee;
 }
 
-a:link{
+a:link {
 	color: #F60;
-	text-decoration:none;}
+	text-decoration:none;
+}
 
-a:visited{
+a:visited {
 	color:#F60;
-	text-decoration:none;}
+	text-decoration:none;
+}
 
-a:hover{
-	color: #efaa45;}
+a:hover {
+	color: #efaa45;
+}
+
+.submit_button {
+  width: 500px;
+  text-align: right;
+}
