--- a/app/views/layouts/i_reach/application.html.erb
+++ b/app/views/layouts/i_reach/application.html.erb
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
   <!-- iReach application.html.rb -->
-  <title><%= h(yield(:title) || "iReach Newsletter Manager") %></title>
+  <title><%= h(@content_for_title || "iReach Newsletter Manager") %></title>
   <%= stylesheet_link_tag    "i_reach/application", :media => "all" %>
   <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/le-frog/jquery-ui.css" media="screen" rel="stylesheet" type="text/css" />
   <%= javascript_include_tag "i_reach/application" %>
