--- a/app/views/layouts/i_reach/application.html.erb
+++ b/app/views/layouts/i_reach/application.html.erb
@@ -17,10 +17,10 @@
       <li><a href="/admin">Home</a></li>
       <li><span onClick="$('#setup_submenu').toggle();return false">Setup</span>
         <ul id='setup_submenu' <%= ' style="display:none"'.html_safe unless request.path =~ %r#/newsletter/designs|setup# %>>
-          <%= content_tag(:li, link_to('Newsletter Designs', newsletter.designs_path)) if can?(:manage, Newsletter::Design) %>
+          <%= content_tag(:li, link_to('Newsletter Designs', news.designs_path)) if can?(:manage, Newsletter::Design) %>
         </ul>
       </li>
-      <%= content_tag(:li, link_to('Newsletters', newsletter.newsletters_path)) if can?(:manage, Newsletter::Newsletter) %>
+      <%= content_tag(:li, link_to('Newsletters', news.newsletters_path)) if can?(:manage, Newsletter::Newsletter) %>
       <li><span onClick="$('#mailings_submenu').toggle();return false">Mailings</span>
         <ul id='mailings_submenu' <%= ' style="display:none"'.html_safe unless request.path =~ %r|/mail_manager| %>>
           <%= content_tag(:li, link_to('Contacts', mail_manager.contacts_path)) if can?(:manage, MailManager::Contact) %>
