--- a/app/views/layouts/i_reach/application.html.erb
+++ b/app/views/layouts/i_reach/application.html.erb
@@ -21,6 +21,7 @@
         </ul>
       </li>
       <%= content_tag(:li, link_to('Newsletters', news.newsletters_path)) if can?(:manage, Newsletter::Newsletter) %>
+      <% if can?(:manage, MailManager::Mailings) %>
       <li><span onClick="$('#mailings_submenu').toggle();return false">Mailings</span>
         <ul id='mailings_submenu' <%= ' style="display:none"'.html_safe unless request.path =~ %r|/mail_manager| %>>
           <%= content_tag(:li, link_to('Contacts', mail_manager.contacts_path)) if can?(:manage, MailManager::Contact) %>
@@ -29,6 +30,7 @@
           <%= content_tag(:li, link_to('Bounces', mail_manager.bounces_path)) if can?(:manage, MailManager::Bounce) %>
         </ul>
       </li>
+      <% end %>
     </ul>
   </div>
 <div id="page_content">
