--- a/app/assets/stylesheets/i_reach/admin.css
+++ b/app/assets/stylesheets/i_reach/admin.css
@@ -138,7 +138,9 @@ table.list tr.even {
 	background: #e2e8d9;
 }
 
-
+.mailing_buttons {
+	width: 310px;
+}
 /* form labels have different alignment*/
 label {font-size: 11pt;
    font-family: helvetica, arial, sans-serif;
@@ -182,7 +184,7 @@ input.button {
     font-size: 11pt;
     font-weight: bold;
     color: #555;
-    margin-right: 10px;
+    margin-right: 5px;
     cursor: pointer; 
 }
 
@@ -219,7 +221,7 @@ a.button:link, a.button:visited {
     font-size: 11pt;
     font-weight: bold;
     color: #555;
-    margin-right: 10px;
+    margin-right: 5px;
     /* do I need this? */
     cursor: pointer; 
 }
