new version gem push; fixed layout's lefrog css to point at https; post installation message; changelog link for readme

--- a/app/views/layouts/i_reach/application.html.erb
+++ b/app/views/layouts/i_reach/application.html.erb
@@ -4,7 +4,7 @@
   <!-- iReach application.html.rb -->
   <title><%= h(@page_title || "iReach Newsletter Manager") %></title>
   <%= stylesheet_link_tag    "i_reach/application", :media => "all" %>
-  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/le-frog/jquery-ui.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/le-frog/jquery-ui.css" media="screen" rel="stylesheet" type="text/css" />
   <%= javascript_include_tag "i_reach/application" %>
   <%= csrf_meta_tags %>
   <%= content_for :head %>
